# revolut-customer

./: .travis.yml  Cargo.toml  README.md  aliases.js  index.html  search-index.js  travis-helper.sh
darling/: all.html  index.html  macro.uses_lifetimes.html  macro.uses_type_params.html  sidebar-items.js  struct.Error.html  trait.FromDeriveInput.html  trait.FromField.html  trait.FromGenericParam.html  trait.FromGenerics.html  trait.FromMeta.html  trait.FromTypeParam.html  trait.FromVariant.html  type.Result.html
darling_core/: FromGenerics.t.html  FromTypeParam.t.html  all.html  index.html  macro.uses_lifetimes.html  macro.uses_type_params.html  sidebar-items.js  trait.FromDeriveInput.html  trait.FromField.html  trait.FromGenericParam.html  trait.FromGenerics.html  trait.FromMeta.html  trait.FromTypeParam.html  trait.FromVariant.html
darling_macro/: FromDeriveInput.m.html  FromField.m.html  FromMetaItem.m.html  FromTypeParam.m.html  FromVariant.m.html  all.html  derive.FromDeriveInput.html  derive.FromField.html  derive.FromMeta.html  derive.FromMetaItem.html  derive.FromTypeParam.html  derive.FromVariant.html  index.html
derive_builder/: all.html  index.html
derive_builder_core/: all.html  enum.BuilderPattern.html  fn.doc_comment_from.html  index.html  struct.Bindings.html  struct.Block.html  struct.BuildMethod.html  struct.Builder.html  struct.BuilderField.html  struct.DeprecationNotes.html  struct.Initializer.html  struct.Setter.html
examples/: login.rs
getset/: Getters.m.html  MutGetters.m.html  Setters.m.html  all.html  derive.Getters.html  derive.MutGetters.html  derive.Setters.html  index.html
ident_case/: all.html  enum.RenameRule.html  index.html
revolut_customer/: BASE_API_URL.t.html  BASE_API_URL.v.html  ErrResponse.t.html  OptionsBuilder.t.html  _DERIVE_failure_Fail_FOR_ApiError.v.html  _DERIVE_failure_core_fmt_Display_FOR_ApiError.v.html  _IMPL_DESERIALIZE_FOR_ErrResponse.v.html  all.html  constant._DERIVE_failure_Fail_FOR_ApiError.html  constant._DERIVE_failure_core_fmt_Display_FOR_ApiError.html  constant._IMPL_DESERIALIZE_FOR_ErrResponse.html  enum.ApiError.html  index.html  sidebar-items.js  static.BASE_API_URL.html  struct.BASE_API_URL.html  struct.Client.html  struct.ErrResponse.html  struct.Options.html  struct.OptionsBuilder.html
src/: amount.rs  error.rs  lib.rs  private.rs  public.rs
syn/: all.html  enum.BinOp.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericMethodArgument.html  enum.ImplItem.html  enum.Item.html  enum.Pat.html  enum.RangeLimits.html  (+103 more)
(+345 files in other folders)
