[package]
name = "revolut_customer"
version = "0.1.0"
authors = ["Razican <razican@protonmail.ch>"]
edition = "2018"

[dependencies]
reqwest = "0.9.5"
failure = "0.1.3"
derive_builder = "0.7.0"
lazy_static = "1.2.0"
serde = "1.0.82"
serde_derive = "1.0.82"

[dependencies.chrono]
version = "0.4.6"
features = ["serde"]

[dev-dependencies]
dotenv = "0.13.0"

[[example]]
name = "login"
