[package]
name = "revolut_customer"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Razican <razican@protonmail.ch>"]
edition = "2018"
repository = "https://github.com/Razican/revolut-customer"
description = """
Reverse engineered Revolut customer API.
"""
keywords = ["revolut", "api"]
categories = ["api-bindings"]

[dependencies]
reqwest = "0.9.5"
failure = "0.1.3"
derive_builder = "0.7.0"
lazy_static = "1.2.0"
serde = "1.0.83"
serde_derive = "1.0.83"

[dependencies.chrono]
version = "0.4.6"
features = ["serde"]

[dependencies.uuid]
version = "0.7.1"
features = ["serde"]

[dependencies.getset]
version = "0.0.6"
git = "https://github.com/Razican/getset"
branch = "deref"

[dev-dependencies]
dotenv = "0.13.0"

[[example]]
name = "login"
