[package]
name = "revolut_customer"
version = "0.0.2"
license = "MIT/Apache-2.0"
authors = ["Razican <razican@protonmail.ch>"]
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/revolut_customer/"
repository = "https://github.com/Razican/revolut-customer/"
homepage = "https://www.revolut.com/"
description = "Reverse engineered Revolut customer API."
keywords = ["revolut", "api", "customer"]
categories = ["api-bindings"]

[badges]
travis-ci = { repository = "Razican/revolut-customer", branch = "master" }
codecov = { repository = "Razican/revolut-customer", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "Razican/revolut-customer" }
is-it-maintained-open-issues = { repository = "Razican/revolut-customer" }
maintenance = { status = "experimental" }

[dependencies]
reqwest = "0.9.5"
failure = "0.1.5"
derive_builder = "0.7.0"
lazy_static = "1.2.0"
serde = { version = "1.0.84", features = ["derive"] }

[dependencies.chrono]
version = "0.4.6"
features = ["serde"]

[dependencies.uuid]
version = "0.7.1"
features = ["serde"]

[dependencies.getset]
version = "0.0.6"
git = "https://github.com/Razican/getset"
branch = "deref"

[dev-dependencies]
dotenv = "0.13.0"

[[example]]
name = "login"
